2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	* flumotion/test/test_common_format.py:
	  Don't use assert for comparisons in tests; it doesn't log the
	  actual value when the test fails.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	* flumotion/component/converters/overlay/overlay.py:
	  Logging about every buffer should be at LOG level.

2010-09-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff
	* flumotion/component/feedcomponent.py:
	factor out the buffer callback to ease subclassing
	the muxer component

2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  An assert should give some more info so we can debug.

2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/consumers/Makefile.am:
	* flumotion/component/consumers/pipeline (added):
	* flumotion/component/consumers/pipeline/pipeline.xml (added):
	* flumotion/component/consumers/pipeline/__init__.py (added):
	* flumotion/component/consumers/pipeline/Makefile.am (added):
	* flumotion/component/consumers/pipeline/pipeline.py (added):
	  Add a pipeline-consumer component, since we already had
	  -producer and -converter.

2010-09-15  Xavier Queralt  <xqueralt@gmail.com>

	* configure.ac:
	Start the new development series.

2010-09-15  Xavier Queralt  <xqueralt@gmail.com>

	* configure.ac:
	Back to dev.

=== release 0.8.0 ===

2010-09-14  Xavier Queralt  <xqueralt@gmail.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	* pkg/ubuntu-karmic/changelog:
	* pkg/ubuntu-lucid/changelog:
	Releasing 0.8.0 "7 Portes"

2010-09-14  Xavier Queralt  <xqueralt@gmail.com>

	* flumotion/admin/gtk/Makefile.am:
	* flumotion/admin/gtk/about.py:
	* flumotion/admin/gtk/dialogs.py:
	Use gtk's about dialog if possible, it simplifies a bit things.
